--- a/concare_notebook.ipynb
+++ b/concare_notebook.ipynb
@@ -51,7 +51,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# !/opt/bin/nvidia-smi"
+        "!/opt/bin/nvidia-smi"
       ],
       "metadata": {
         "id": "V6wX0omO0hHA"
@@ -171,7 +171,7 @@
         "                                       listfile=os.path.join(data_path, 'val_listfile.csv'),\n",
         "                                       period_length=48.0)\n",
         "\n",
-        "# 这个函数不理解用处\n",
+        "# \n",
         "discretizer = Discretizer(timestep=arg_timestep,\n",
         "                          store_masks=True,\n",
         "                          impute_strategy='previous',\n",
